tests/reference/ast_new-conditional_expr1-07ccb9e.stderr
tokenizer error: Token '\' is not recognized
  --> tests/parser/conditional_expr1.py:23:62
   |
23 | (self.assertTrue if tktype in whentrue else self.assertFalse)\
   |                                                              ^ token not recognized
